# robinreal_datathon_challenge_2026

./: .env.example  .gitignore  DATASET.md  Dockerfile  MCP_TOOLS.md  README.md  artifacts_urls.json  aws.txt  claude.txt  docker-compose.gpu.yml  docker-compose.yml  download_artifacts.sh  download_images.sh  fix_image_content_types.py  image_urls.py  images_manifest.json  pyproject.toml
app/: config.py  main.py
app/core/: hard_filters.py
app/geo/: README.md  __init__.py  migrate.py  poi.py  reverse_geocode.py
app/harness/: events.py  search_service.py  session_middleware.py
app/models/: schemas.py
app/participant/: bedrock_client.py  bm25_index.py  embeddings.py  hard_fact_extraction.py  listing_quality.py  listing_row_parser.py  query_understanding.py  schemas.py  soft_fact_extraction.py  soft_filtering.py  unified_ranker.py
apps_sdk/server/: client.py  main.py  viewer.html  widget.py
apps_sdk/web/: package-lock.json  package.json
benchmarks/: benchmarks.json  scripts.py
datathon_snapshot/: README.md
datathon_snapshot/geo/: overpass_university.json
docs/: datathon2026_robinreal_technical_writeup.tex
features_vlm/siglip2/: shard_00000.npz  shard_00001.npz  shard_00002.npz  shard_00003.npz  shard_00004.npz  shard_00005.npz  shard_00006.npz  shard_00007.npz  shard_00008.npz  (+63 more)
scripts/: backfill_rooms.py  bootstrap_from_s3.sh  build_bm25_index.py  build_text_embeddings.py  clean_descriptions.py  download_images.sh  eval_llm_judge.py  geo_enrich.py  infer.py  siglip2_embed.py  siglip2_search.py  smoke_text_pipeline.py  unified_search.py
(+10 files in other folders)
