[project]
name = "datathon2026-challenge-harness"
version = "0.1.0"
description = "Starter FastAPI harness for the Datathon 2026 listings challenge."
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0,<1.0.0",
    "boto3>=1.39.0,<2.0.0",
    "fastapi>=0.115.0,<1.0.0",
    "httpx>=0.28.0,<1.0.0",
    "mcp>=1.25.0",
    "numpy>=2.4.4,<3.0.0",
    "pillow>=12.2.0",
    "rank-bm25>=0.2.2,<0.3.0",
    "reverse-geocoder>=1.5.1",
    "safetensors>=0.7.0",
    "scikit-learn>=1.5.0",
    "sentencepiece>=0.2.1",
    "snowballstemmer>=2.2.0,<3.0.0",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
    "transformers>=5.5.4",
    "uvicorn[standard]>=0.32.0,<1.0.0",
]

# fastembed and fastembed-gpu share the same `fastembed` import and cannot
# coexist, so pick exactly one via an extra:
#   CPU: pip install ".[cpu]"    (default in Dockerfile)
#   GPU: pip install ".[gpu]"    (activated by docker-compose.gpu.yml)
[project.optional-dependencies]
cpu = ["fastembed>=0.4.0,<1.0.0"]
gpu = ["fastembed-gpu>=0.4.0,<1.0.0"]

[dependency-groups]
dev = [
    "pytest>=8.3.0,<9.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "apps_sdk"]

[tool.pytest.ini_options]
pythonpath = ["."]
